# cloudflare-operator

./: .koshee-project  .kubecontext  Cargo.toml  Dockerfile.rust  justfile
internal/clients/cf/: api_test.go  configuration_test.go
internal/controller/: adapter_test.go  clustertunnel_controller.go  coverage_gap_test.go  generic_tunnel_reconciler.go  generic_tunnel_reconciler_test.go  tunnel_controller.go  tunnelbinding_controller.go  tunnelbinding_controller_test.go  utils.go  utils_test.go
internal/testutil/cfmock/: server.go
k3d/: cluster.yaml
src/: lib.rs  main.rs  metrics.rs
src/cloudflare/: client.rs  types.rs
src/controllers/: access_tunnel.rs  context.rs  mod.rs  tunnel.rs  tunnel_binding.rs
src/crds/: access_tunnel.rs  mod.rs  tunnel_binding.rs
